--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./taxi_trace/templates/map.html"></a>
+    <a href="./taxi_trace/templates/map.html">轨迹图</a>
 </body>
 </html>
