--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./taxi_trace/templates/map.html">轨迹图</a>
+    <a href="./taxi_OD/od_polyline.html">OD 图</a>
 </body>
 </html>
