--- a/taxi_OD/od_polyline.html
+++ b/taxi_OD/od_polyline.html
@@ -24,9 +24,10 @@
 <div id="map"></div>
 <canvas id="canvas"></canvas>
 
-<script type="text/javascript" src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=1XjLLEhZhQNUzd93EjU5nOGQ"></script>
-<script type="text/javascript" src="../build/mapv.js"></script>
+<script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=1XjLLEhZhQNUzd93EjU5nOGQ"></script>
+<!-- <script type="text/javascript" src="../build/mapv.js"></script> -->
+<script type="text/javascript" src="https://mapv.baidu.com/build/mapv.min.js"></script>
 
 <script type="text/javascript">
 
@@ -47,7 +48,7 @@
 
 
 
-    $.get('all_data.csv', function(csvstr) {
+    $.get('od_polyline.csv', function(csvstr) {
         var dataSet = mapv.csv.getDataSet(csvstr);
         data = dataSet.get();
         data = data.map(function (item) {
