--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <a href="./taxi_trace/templates/trail_map.html">轨迹图</a>
     <br>
     <a href="./taxi_OD/od_polyline.html">OD 图</a>
+    <br>
+    <a href="./hot/on.html">上车地点热力图</a>
+    <br>
+    <a href="./hot/test.html">上车地点</a>
 </body>
 </html>
