--- a/hot/test.html
+++ b/hot/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>上车地点</title>
 
     <style type="text/css">
         html, body {
