--- a/hot/off.html
+++ b/hot/off.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://mapv.baidu.com/build/mapv.min.js"></script>
-    <title>热力图功能示例</title>
+    <title>下车热力图</title>
     <style type="text/css">
         ul,li{list-style: none;margin:0;padding:0;float:left;}
         html{height:100%}
