--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <br>
     <a href="./hot/on.html">上车地点热力图</a>
     <br>
+    <a href="./hot/off.html">下车地点热力图</a>
+    <br>
     <a href="./hot/test.html">上车地点</a>
+    <br>
+    <a href="./hot/testoff.html">下车地点</a>
 </body>
 </html>
